# chorus

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
chorus/: __init__.py  core.py
htn/: utils.py
src/chorus/: __init__.py  cli.py  web_server.py
src/chorus/core/: __init__.py  models.py  storage.py  versioning.py
src/chorus/decorators/: chorus.py
src/chorus/web/: index.html  script.js  style.css
src/prompt-chorus/: __init__.py
src/prompt-chorus/decorators/: __init__.py  chorus.py
src/prompt-chorus/utils/: prompt_extraction.py
src/prompt_chorus/web/: styles.css
